Add method to change user roles.
